[tool.poetry]
name = "homework-21-2"
version = "0.1.0"
description = ""
authors = ["Artyom_Kazagashev <tema124ru@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_21"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
